--- a/user-service/src/main/resources/messages_fr.properties
+++ b/user-service/src/main/resources/messages_fr.properties
@@ -3,3 +3,4 @@ user.update.message = Mise a jour de l'utilisateur avec l'identifiant %s
 user.delete.message = Suppression de l'utilisateur avec l'identifiant %s
 user.absent = L'utilisateur avec l'identifiant %s n'existe pas
 user.invalid.argument = Parametre invalide
+user.unauthorized.operation= Cette action n'est pas autorisée ou un problème a été rencontré lors de son exécution
